--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <name>billing</name>
-    <description>Basic project for Spring Boot</description>
+    <description>Proyecto básico para Spring Boot</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
